[metadata]
name = webtypy
url = https://github.com/pyodide/webtypy
version = 0.1.0
license = MPL 2.0
license_files = LICENCE
description = This module contains the DOM types for the majority of the web APIs used in a web browser. These can be used by an IDE to give type hinting and completion during the development using DOM apis.
long_description = file: README.md
long_description_content_type = text/markdown
author = Simone Giacomelli
author_email = simone.giacomelli@gmail.com

[options]
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* = py.typed, *.pyi

[options.packages.find]
where = src
