[metadata]
name = webtypy
url = https://github.com/pyodide/webtypy
version = 0.1.7
license = MPL 2.0
license_files = LICENCE
description = This module contains the DOM types for the majority of the web APIs used in a web browser. These can be used by an IDE to give type hinting and completion during the development using DOM apis.
long_description = file: README.md
long_description_content_type = text/markdown
author = Simone Giacomelli
author_email = simone.giacomelli@gmail.com

[options.extras_require]
dev =
    build==0.6.0.post1
    twine==3.4.2
    wheel==0.37.0
    black==23.1.0

[options]
package_dir =
    =src
packages = js-stubs
zip_safe = False
include_package_data = True

[options.package_data]
* = py.typed, *.pyi

[options.packages.find]
where = src
